@@ -3,21 +3,24 @@ package mandatory.cinemama.Configurations;
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.time.Month;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
+import java.util.Set;
+
+import mandatory.cinemama.DTOs.ActorDTO;
+import mandatory.cinemama.DTOs.DirectorDTO;
+import mandatory.cinemama.DTOs.ImputDTOs.HallInputDTO;
+import mandatory.cinemama.DTOs.ImputDTOs.TheaterInputDTO;
+import mandatory.cinemama.DTOs.TheaterDTO;
 import mandatory.cinemama.Entities.Actor;
 import mandatory.cinemama.Entities.Director;
 import mandatory.cinemama.Entities.Genre.EGenres;
 import mandatory.cinemama.Entities.Genre.Genre;
-import mandatory.cinemama.Entities.Hall.Hall;
 import mandatory.cinemama.Entities.Hall.HallRow.ERows;
 import mandatory.cinemama.Entities.Hall.HallRow.Row;
 import mandatory.cinemama.Entities.Hall.Seat;
 import mandatory.cinemama.Entities.Movie;
 import mandatory.cinemama.Entities.Reservation;
 import mandatory.cinemama.Entities.Schedule;
-import mandatory.cinemama.Entities.Theater;
 import mandatory.cinemama.Entities.User.ERoles;
 import mandatory.cinemama.Entities.User.Role;
 import mandatory.cinemama.Security.AuthenticationPayload.Request.SignupRequest;
@@ -34,6 +37,7 @@ import mandatory.cinemama.Services.ScheduleService.ScheduleService;
 import mandatory.cinemama.Services.SeatService.SeatService;
 import mandatory.cinemama.Services.TheaterService.TheaterService;
 import mandatory.cinemama.Services.UserService.UserService;
+import mandatory.cinemama.Utils.DTOConverter;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.context.annotation.Profile;
@@ -99,10 +103,10 @@ public class DatabaseConfig implements CommandLineRunner {
       );
     }
 
-    if (theaterService.findAllTheaters().isEmpty()) {
-      theaterService.addTheater(new Theater("Odeon", "Saxogade 25"));
+    if (theaterService.findAllTheaters(false).isEmpty()) {
+      theaterService.addTheater(new TheaterDTO("Odeon", "Saxogade 25"));
       theaterService.addTheater(
-        new Theater("Village Cinema", "Gammel Konge Vej 99")
+        new TheaterDTO("Village Cinema", "Gammel Konge Vej 99")
       );
       // theaterService.addTheater(
       //   new Theater("Coco Bongo", "Gammel Konge Vej 6")
@@ -112,13 +116,25 @@ public class DatabaseConfig implements CommandLineRunner {
     }
 
     if (hallService.findAllHalls().isEmpty()) {
-      int numberOfTheaters = theaterService.findAllTheaters().size();
+      int numberOfTheaters = theaterService.findAllTheaters(false).size();
       for (int i = 0; i < numberOfTheaters; i++) {
         hallService.addHall(
-          new Hall("Sal 1", theaterService.findAllTheaters().get(i))
+          new HallInputDTO(
+            "Sal 1",
+            DTOConverter.mapDTO(
+              theaterService.findAllTheaters(true).get(i),
+              TheaterInputDTO.class
+            )
+          )
         );
         hallService.addHall(
-          new Hall("Sal 2", theaterService.findAllTheaters().get(i))
+          new HallInputDTO(
+            "Sal 2",
+            DTOConverter.mapDTO(
+              theaterService.findAllTheaters(true).get(i),
+              TheaterInputDTO.class
+            )
+          )
         );
         // hallService.addHall(
         //   new Hall("Sal 3", theaterService.findAllTheaters().get(i))
@@ -158,14 +174,14 @@ public class DatabaseConfig implements CommandLineRunner {
       }
     }
     if (directorService.findAllDirectors().isEmpty()) {
-      directorService.addDirector(new Director("Peter Jackson"));
+      directorService.addDirector(new DirectorDTO("Peter Jackson"));
     }
 
     if (actorService.findAllActors().isEmpty()) {
-      actorService.addActor(new Actor("Elijah Wood"));
-      actorService.addActor(new Actor("Ian McKellen"));
-      actorService.addActor(new Actor("Liv Tyler"));
-      actorService.addActor(new Actor("Viggo Mortensen"));
+      actorService.addActor(new ActorDTO("Elijah Wood"));
+      actorService.addActor(new ActorDTO("Ian McKellen"));
+      actorService.addActor(new ActorDTO("Liv Tyler"));
+      actorService.addActor(new ActorDTO("Viggo Mortensen"));
     }
 
     if (genreService.findAllGenres().isEmpty()) {
@@ -175,7 +191,10 @@ public class DatabaseConfig implements CommandLineRunner {
       }
     }
 
-    if (movieService.findAllMovies().isEmpty()) {
+    if (movieService.findAllMovies(true).isEmpty()) {
+      System.out.println(
+        actorService.findActorsByNameContaining("Elijah Wood").get(0).getName()
+      );
       movieService.addMovie(
         new Movie(
           "Lord of the Rings: The Two Towers",
@@ -183,16 +202,31 @@ public class DatabaseConfig implements CommandLineRunner {
           LocalTime.of(2, 59),
           "Frodo and Sam are trekking to Mordor to destroy the One Ring of Power while Gimli, Legolas and Aragorn search for the orc-captured Merry and Pippin. All along, nefarious wizard Saruman awaits the Fellowship members at the Orthanc Tower in Isengard.",
           8.7d,
-          new ArrayList<Actor>(
-            Arrays.asList(
-              actorService.findActorsByNameContaining("Elijah Wood").get(0),
-              actorService.findActorsByNameContaining("Ian McKellen").get(0),
-              actorService.findActorsByNameContaining("Liv Tyler").get(0),
-              actorService.findActorsByNameContaining("Viggo Mortensen").get(0)
+          Set.of(
+            DTOConverter.mapDTO(
+              actorService.findAllActors().get(0),
+              Actor.class
+            ),
+            DTOConverter.mapDTO(
+              actorService.findAllActors().get(1),
+              Actor.class
+            ),
+            DTOConverter.mapDTO(
+              actorService.findAllActors().get(2),
+              Actor.class
+            ),
+            DTOConverter.mapDTO(
+              actorService.findAllActors().get(3),
+              Actor.class
             )
           ),
-          directorService.findDirectorsByNameContaining("Peter Jackson"),
-          List.of(
+          Set.of(
+            DTOConverter.mapDTO(
+              directorService.findAllDirectors().get(0),
+              Director.class
+            )
+          ),
+          Set.of(
             genreService.findGenreByName("ADVENTURE"),
             genreService.findGenreByName("FANTASY"),
             genreService.findGenreByName("ACTION")
@@ -206,13 +240,15 @@ public class DatabaseConfig implements CommandLineRunner {
         )
       );
     }
-
     if (scheduleService.findAllSchedules().isEmpty()) {
       scheduleService.addSchedule(
         new Schedule(
           LocalTime.of(14, 30),
           LocalDate.of(2021, Month.JANUARY, 24),
-          movieService.findAllMovies().get(0),
+          DTOConverter.mapDTO(
+            movieService.findAllMovies(true).get(0),
+            Movie.class
+          ),
           hallService.findAllHalls().get(0)
         )
       );
@@ -220,7 +256,10 @@ public class DatabaseConfig implements CommandLineRunner {
         new Schedule(
           LocalTime.of(14, 30),
           LocalDate.of(2021, Month.JANUARY, 25),
-          movieService.findAllMovies().get(0),
+          DTOConverter.mapDTO(
+            movieService.findAllMovies(true).get(0),
+            Movie.class
+          ),
           hallService.findAllHalls().get(0)
         )
       );
@@ -228,7 +267,10 @@ public class DatabaseConfig implements CommandLineRunner {
         new Schedule(
           LocalTime.of(14, 31),
           LocalDate.of(2021, Month.JANUARY, 24),
-          movieService.findAllMovies().get(0),
+          DTOConverter.mapDTO(
+            movieService.findAllMovies(true).get(0),
+            Movie.class
+          ),
           hallService.findAllHalls().get(0)
         )
       );
@@ -236,21 +278,23 @@ public class DatabaseConfig implements CommandLineRunner {
         new Schedule(
           LocalTime.of(14, 30),
           LocalDate.of(2021, Month.JANUARY, 24),
-          movieService.findAllMovies().get(0),
+          DTOConverter.mapDTO(
+            movieService.findAllMovies(true).get(0),
+            Movie.class
+          ),
           hallService.findAllHalls().get(3)
         )
       );
     }
+
     if (reservationService.findAllReservations().isEmpty()) {
       reservationService.addReservation(
         new Reservation(
           false,
           scheduleService.findAllSchedules().get(0),
-          new ArrayList<Seat>(
-            Arrays.asList(
-              seatService.findAllSeats().get(0),
-              seatService.findAllSeats().get(1)
-            )
+          List.of(
+            seatService.findAllSeats().get(0),
+            seatService.findAllSeats().get(1)
           ),
           userService.findAllUsers().get(0)
         )
